RAP-3362 Corrected Breadcrumb Spacing

--- a/app_storefront_core/cartridge/scss/default/_checkout.scss
+++ b/app_storefront_core/cartridge/scss/default/_checkout.scss
@@ -1,7 +1,5 @@
 .checkout-progress-indicator {
-	font-size: 1em;
 	overflow: hidden;
-	padding-bottom: 1em;
 	div {
 		display: inline;
 		padding: 0 .83em 0 0;
